[gd_scene load_steps=7 format=3 uid="uid://bpmbnvrhsyjdf"]

[ext_resource type="Script" uid="uid://mqk53x47eisu" path="res://Scenes/high_scores.gd" id="1_2o1y1"]
[ext_resource type="Texture2D" uid="uid://b7hc718jsrp5j" path="res://Images/HornetFrames.png" id="2_lm4h5"]
[ext_resource type="Texture2D" uid="uid://6hv5pawj8oyn" path="res://Images/WingOption2.png" id="3_vas7x"]
[ext_resource type="Texture2D" uid="uid://flne8b5ixd1w" path="res://Images/BeeIcon.png" id="4_mn56e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n45e2"]
atlas = ExtResource("2_lm4h5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_opfnp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45e2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="CanvasLayer"]
script = ExtResource("1_2o1y1")

[node name="MenuBackground" type="ColorRect" parent="."]
process_mode = 3
z_index = -1
offset_right = 1165.0
offset_bottom = 657.0
mouse_filter = 2
color = Color(0.471483, 0.471234, 0.212482, 1)

[node name="Label" type="RichTextLabel" parent="MenuBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.5
offset_top = -294.5
offset_right = 357.5
offset_bottom = 305.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/mono_font_size = 0
theme_override_font_sizes/bold_font_size = 0
bbcode_enabled = true
text = "[font_size=50][u]High Scores[/u][/font_size]"
horizontal_alignment = 1

[node name="ReturnToMenu" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 209.0
offset_right = 132.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Return to Main Menu"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = 269.0
offset_right = 99.5
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Quit to Desktop"

[node name="Hornet" type="AnimatedSprite2D" parent="."]
position = Vector2(940, 343)
sprite_frames = SubResource("SpriteFrames_opfnp")

[node name="WingOption3" type="Sprite2D" parent="Hornet"]
z_index = -1
position = Vector2(3, -11)
texture = ExtResource("3_vas7x")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(226, 305)

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
z_index = 1
position = Vector2(0, 100)
texture = ExtResource("4_mn56e")
flip_h = true

[node name="WingOption2" type="Sprite2D" parent="Marker2D/Sprite2D"]
z_index = -1
position = Vector2(-11, -11)
texture = ExtResource("3_vas7x")

[node name="DebounceTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="pressed" from="ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
